--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h2 class="experience__title">Rheology <span class="hand">and</span> reinforcement</h2>
           <!-- <p class="experience__org">IAM RAS</p> -->
           <p class="experience__body">
-            During my time as a senior researcher at the Institute of Applied Mechanics, I specialised in the study of the rheology of polymers and filled systems. My work involved smart materials and polymer reinforcement theory, as well as helping young researchers to develop their skills.
+            During my time as a Scientist at the Institute of Applied Mechanics, I specialised in the study of the rheology of polymers and filled systems. My work involved smart materials and polymer reinforcement theory, as well as helping young researchers to develop their skills.
           </p>
         </div>
       </section>
@@ -154,13 +154,13 @@
             </ul>
           </div>
         </div>
-        <div class="section__media">
+        <!-- <div class="section__media">
           <a class="qr-preview" href="/qr">
             <span class="sr-only">QR link</span>
             <img class="qr-preview__image" src="assets/qr.png" alt="" aria-hidden="true" />
           </a>
         </div>
-      </section>
+      </section> -->
 
     </main>
     <script>
