--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
       <section class="section section--senior">
         <div class="section__text">
           <h2 class="experience__title">Rheology <span class="hand">and</span> reinforcement</h2>
+          <img class="rhe-preview__image" src="assets/mt.png" alt="" aria-hidden="true" />
           <!-- <p class="experience__org">IAM RAS</p> -->
           <p class="experience__body">
             During my time as a Scientist at the Institute of Applied Mechanics, I specialised in the study of the rheology of polymers and filled systems. My work involved smart materials and polymer reinforcement theory, as well as helping young researchers to develop their skills.
           </p>
         </div>
 
-        <div class="section__media">
+        <!-- <div class="section__media">
           <div class="placeholder placeholder--rhe">
             <img class="rhe-preview__image" src="assets/mt.png" alt="" aria-hidden="true" />
           </div>
-        </div>
+        </div> -->
       </section>
 
       </section>
