--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <span>Semenov</span>
           </h1>
           <p class="hero__tagline">Polymer Scientist,<br />Engineer</p>
+          <p class="experience__body hero__bio">
+           I work with polymer formulations and processes, developing materials and scaling them from lab to production. I’m really interested in biobased and filled systems, extrusion, and injection molding. I’m looking for a role where I can put my experience to good use and build reliable, real-world materials.
+          </p>
         </div>
         <a class="social__preview social__preview--hero" href="/polymers">
           <span class="sr-only">Interactive Plastic Identification</span>
