--- a/ftir/index.html
+++ b/ftir/index.html
@@ -12,7 +12,7 @@
   <div class="app-shell">
     <header class="topbar surface">
       <div class="brand">
-        <div class="brand-mark">FT</div>
+        <img src="logo.png" alt="FTIR Merger logo" class="brand-logo" />
         <div class="brand-copy">
           <p class="eyebrow">Spectra workspace</p>
           <strong>FTIR Merger</strong>
