--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
                 </a>
               </li>
               <li class="social__item">
+                <a class="social__link" href="https://github.com/ksider" target="_blank" rel="noopener noreferrer">
+                  <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+                    <path
+                      d="M12 0.3a12 12 0 00-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.5-1.2-1.1-1.5-1.1-1.5-.9-.6.1-.6.1-.6 1 .1 1.5 1 1.5 1 .9 1.5 2.4 1.1 3 .8.1-.6.4-1.1.7-1.3-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.4 1.2-3.3-.1-.3-.5-1.6.1-3.2 0 0 1-.3 3.3 1.2a11.4 11.4 0 016 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.9.1 3.2.8.9 1.2 2 1.2 3.3 0 4.5-2.7 5.5-5.3 5.8.4.3.7.9.7 1.8v2.6c0 .3.2.7.8.6A12 12 0 0012 .3z"
+                    />
+                  </svg>
+                  <span class="sr-only">GitHub</span>
+                </a>
+              </li>
+              <li class="social__item">
                 <a class="social__link" href="https://x.com/Ksider" target="_blank" rel="noopener noreferrer">
                   <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                     <path
