--- a/ftir/index.html
+++ b/ftir/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FTIR Merger</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="styles.css">
   <script src="./d3.min.js"></script>
 </head>
@@ -18,21 +19,32 @@
           <strong>FTIR viewer</strong>
         </div>
       </div>
-      <div class="topbar-form">
-        <div class="chain-group">
-          <div class="field field--compact field--files">
-            <label class="visually-hidden" for="files" data-i18n="filesLabel">Files (.txt):</label>
-            <input id="files" class="chain-input chain-input--left" type="file" accept=".txt" multiple>
-          </div>
-          <div class="field field--compact field--sample">
-            <label class="visually-hidden" for="sampleIndex" data-i18n="sampleIndex">Sample index (optional):</label>
-            <input id="sampleIndex" class="chain-input chain-input--mid" type="text" placeholder="e.g. A1">
-          </div>
-          <div class="field field--compact field--filename">
-            <label class="visually-hidden" for="fileName" data-i18n="fileName">Output file name (.csv):</label>
-            <input id="fileName" class="chain-input chain-input--mid" type="text" value="merged.csv">
-          </div>
-          <button id="mergeBtn" class="btn primary chain-button chain-button--right" data-i18n="mergeBtn">Merge</button>
+      <div class="topbar-form toolbar">
+        <input id="files" type="file" accept=".txt" multiple style="display:none;">
+        <input id="importSessionInput" type="file" accept=".json" style="display:none;">
+        <div class="toolbar-group">
+          <button id="selectFiles" class="icon-btn primary" type="button" title="Add files" aria-label="Add files">
+            <span class="material-symbols-outlined">upload_file</span>
+          </button>
+          <button id="exportSession" class="icon-btn" type="button" title="Export session" aria-label="Export session">
+            <span class="material-symbols-outlined">file_download</span>
+          </button>
+          <button id="importSession" class="icon-btn" type="button" title="Import session" aria-label="Import session">
+            <span class="material-symbols-outlined">file_open</span>
+          </button>
+          <button id="copyPng" class="icon-btn" type="button" title="Copy chart PNG" aria-label="Copy chart PNG">
+            <span class="material-symbols-outlined">image</span>
+          </button>
+          <button id="copySvg" class="icon-btn" type="button" title="Copy chart SVG" aria-label="Copy chart SVG">
+            <span class="material-symbols-outlined">code</span>
+          </button>
+          <button id="saveCsv" class="icon-btn success" type="button" title="Save CSV" aria-label="Save CSV">
+            <span class="material-symbols-outlined">save</span>
+          </button>
+        </div>
+        <div class="toolbar-group name-group">
+          <label class="visually-hidden" for="fileName">CSV name</label>
+          <input id="fileName" type="text" class="save-name" value="merged.csv" aria-label="CSV file name">
         </div>
       </div>
       <div class="lang-switch">
@@ -77,9 +89,16 @@
               </div>
             </div>
             <div class="control-actions">
-              <button id="refreshChart" type="button" class="btn tonal" disabled data-i18n="refresh">Refresh chart</button>
-              <button id="resetZoom" type="button" class="btn tonal" disabled data-i18n="resetZoom">Reset zoom</button>
-              <button id="saveCsv" type="button" class="btn success" disabled data-i18n="saveCsv">Save CSV</button>
+              <button id="refreshChart" type="button" class="icon-btn" disabled title="Refresh chart" aria-label="Refresh chart">
+                <span class="material-symbols-outlined">refresh</span>
+              </button>
+              <button id="resetZoom" type="button" class="icon-btn" disabled title="Reset zoom" aria-label="Reset zoom">
+                <span class="material-symbols-outlined">zoom_out_map</span>
+              </button>
+              <div class="save-wrap">
+                <input id="fileName" type="text" class="save-name" value="merged.csv" aria-label="CSV file name">
+                <button id="saveCsv" type="button" class="btn success" disabled data-i18n="saveCsv">Save CSV</button>
+              </div>
             </div>
           </div>
         </div>
@@ -96,6 +115,10 @@
         </div>
       </div>
       <div class="peaks-table">
+        <div class="stripe-sets">
+          <button class="stripe-set-btn active" data-set="candidates">Candidates</button>
+          <button class="stripe-set-btn" data-set="confirmed">Confirmed</button>
+        </div>
         <div class="peaks-row peaks-head">
           <span> </span>
           <span data-i18n="colWave">Wavenumber</span>
