--- a/ftir/index.html
+++ b/ftir/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="styles.css">
   <script src="./d3.min.js"></script>
+  <script src="./jcampconverter.min.js"></script>
 </head>
 <body>
   <div class="bg-accent"></div>
@@ -20,7 +21,7 @@
         </div>
       </div>
       <div class="topbar-form toolbar">
-        <input id="files" type="file" accept=".txt" multiple style="display:none;">
+        <input id="files" type="file" accept=".txt,.jdx,.dx,.jsm,.jcm,text/plain,application/octet-stream" multiple style="display:none;">
         <input id="importSessionInput" type="file" accept=".json" style="display:none;">
         <div class="toolbar-group">
           <button id="selectFiles" class="icon-btn primary" type="button" title="Add files" aria-label="Add files">
@@ -88,6 +89,16 @@
                 <input id="yMax" type="number" step="0.1" placeholder="auto" disabled>
               </div>
             </div>
+            <div class="control-group baseline-group">
+              <label data-i18n="baselineSection">Baseline fit</label>
+              <div class="baseline-controls">
+                <select id="baselineSeries"></select>
+                <input id="baselineDegree" type="number" min="1" max="6" step="1" value="2">
+                <button id="baselinePreview" type="button" class="btn tonal" disabled data-i18n="baselinePreview">Preview</button>
+                <button id="baselineApply" type="button" class="btn tonal" disabled data-i18n="baselineApply">Apply</button>
+                <button id="baselineRevert" type="button" class="btn tonal" disabled data-i18n="baselineRevert">Revert</button>
+              </div>
+            </div>
             <div class="control-actions">
               <button id="refreshChart" type="button" class="icon-btn" disabled title="Refresh chart" aria-label="Refresh chart">
                 <span class="material-symbols-outlined">refresh</span>
@@ -130,6 +141,13 @@
         <div id="peaksBody" class="peaks-body"></div>
       </div>
     </div>
+    <footer class="footer surface">
+      <div class="footer-links">
+        <a id="footerSite" href="#" rel="noopener" target="_blank">nikolaysemenov.ru</a>
+        <span class="dot">•</span>
+        <a id="footerGithub" href="#" rel="noopener" target="_blank">GitHub</a>
+      </div>
+    </footer>
   </div>
 
   <script src="./config.js"></script>
