--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <section class="section section--ai-apps">
         <div class="section__text">
         <div class="ai-apps">
-            <p class="ai-apps__headline">Vibe<span class="hand">coding</span></p>
+            <p class="ai-apps__headline"><span class="hand">Vibe</span>coding</p>
             <p class="ai-apps__note">These are small, practical applications I built with ChatGPT to solve real problems in my daily technical work. I use them myself — for example, to generate QR codes, inspect FTIR spectra, and quickly work with data where existing tools are either too heavy or simply missing.</p>
             <ol class="ai-apps__list">
               <li><a href="https://nikolaysemenov.ru/qr">QR-Generator-UI</a> — A single-page QR code generator with extensive styling controls, logo support, and shareable configuration links.</li>
