--- a/ftir/index.html
+++ b/ftir/index.html
@@ -25,19 +25,19 @@
         <input id="importSessionInput" type="file" accept=".json" style="display:none;">
         <div class="toolbar-group">
           <button id="selectFiles" class="icon-btn primary" type="button" title="Add files" aria-label="Add files">
-            <span class="material-symbols-outlined">upload_file</span>
+            <span class="material-symbols-outlined">computer_arrow_up</span>
           </button>
           <button id="exportSession" class="icon-btn" type="button" title="Export session" aria-label="Export session">
             <span class="material-symbols-outlined">file_download</span>
           </button>
           <button id="importSession" class="icon-btn" type="button" title="Import session" aria-label="Import session">
-            <span class="material-symbols-outlined">file_open</span>
+            <span class="material-symbols-outlined">unarchive</span>
           </button>
-          <button id="copyPng" class="icon-btn" type="button" title="Copy chart PNG" aria-label="Copy chart PNG">
+          <button id="copyPng" class="icon-btn saveimg" type="button" title="Copy chart PNG" aria-label="Copy chart PNG">
             <span class="material-symbols-outlined">image</span>
           </button>
-          <button id="copySvg" class="icon-btn" type="button" title="Copy chart SVG" aria-label="Copy chart SVG">
-            <span class="material-symbols-outlined">code</span>
+          <button id="copySvg" class="icon-btn saveimg" type="button" title="Copy chart SVG" aria-label="Copy chart SVG">
+            <span class="material-symbols-outlined">lasso_select</span>
           </button>
           <button id="saveCsv" class="icon-btn success" type="button" title="Save CSV" aria-label="Save CSV">
             <span class="material-symbols-outlined">save</span>
