--- a/ftir/index.html
+++ b/ftir/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="topbar-form toolbar">
-        <input id="files" type="file" accept=".txt,.jdx,.dx,.jsm,.jcm,text/plain,application/octet-stream" multiple style="display:none;">
+        <input id="files" type="file" accept=".txt,.jdx,.dx,.jsm,.jcm,.csv,text/plain,application/octet-stream" multiple style="display:none;">
         <input id="importSessionInput" type="file" accept=".json" style="display:none;">
         <div class="toolbar-group">
           <button id="selectFiles" class="icon-btn primary" type="button" title="Add files" aria-label="Add files">
@@ -146,6 +146,8 @@
         <a id="footerSite" href="#" rel="noopener" target="_blank">nikolaysemenov.ru</a>
         <span class="dot">•</span>
         <a id="footerGithub" href="#" rel="noopener" target="_blank">GitHub</a>
+        <span class="dot">•</span>
+        <a id="footerCoffee" href="#" rel="noopener" target="_blank">Сoindrop</a>
       </div>
     </footer>
   </div>
