--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
               <li><a href="https://nikolaysemenov.ru/qr">QR-Generator-UI</a> — A single-page QR code generator with extensive styling controls, logo support, and shareable configuration links.</li>
               <li><a href="https://nikolaysemenov.ru/polymers">Interactive-Plastic-Identification</a> — Follow the flowchart: answer the questions and compare your observations to narrow down possible plastics. You can step back or restart at any moment.</li>
               <li><a href="https://github.com/ksider/Bly">Bly</a> — A modern offline badge generator for conferences and events — built to run entirely in your browser. </li>
-             <li><a href="https://nikolaysemenov.ru/ftir">FTIR viewer</a> — Infrared spectrometer spectrum viewer</li>
-             <li><a href="https://nikolaysemenov.ru/pdf">PDF merger</a> — small service to merge image to PDFs</li>
+             <li><a href="https://nikolaysemenov.ru/ftir">FTIR viewer</a> — Infrared spectrometer spectrum viewer. Supports JCAMP-DX files and adds peaks to tables with tooltips.</li>
+             <li><a href="https://nikolaysemenov.ru/pdf">PDF merger</a> — This is a small service that merges images into PDFs. There is also a version with a server component that can merge Word and PDF files.</li>
             </ol>
       </div>
 
