--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               <li><a href="https://github.com/ksider/Bly">Bly</a> — A modern offline badge generator for conferences and events — built to run entirely in your browser. </li>
              <li><a href="https://nikolaysemenov.ru/ftir">FTIR viewer</a> — Infrared spectrometer spectrum viewer. Supports JCAMP-DX files and adds peaks to tables with tooltips.</li>
              <li><a href="https://nikolaysemenov.ru/pdf">PDF merger</a> — This is a small service that merges images into PDFs. There is also a version with a server component that can merge Word and PDF files.</li>
+                <li><a href="https://nikolaysemenov.ru/pdf">IM-Planner</a> — Local, offline-friendly DOE planner for injection molding. Based on 6-step Scientific molding methodology.</li>
             </ol>
       </div>
 
