--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
             <p class="ai-apps__headline"><span class="hand">Vibe</span>coding</p>
             <p class="ai-apps__note">These are small, practical applications I built with ChatGPT to solve real problems in my daily technical work. I use them myself — for example, to generate QR codes, inspect FTIR spectra, and quickly work with data where existing tools are either too heavy or simply missing.</p>
             <ol class="ai-apps__list">
-              <li><a href="https://nikolaysemenov.ru/qr">QR-Generator-UI</a> — A single-page QR code generator with extensive styling controls, logo support, and shareable configuration links.</li>
-              <li><a href="https://nikolaysemenov.ru/polymers">Interactive-Plastic-Identification</a> — Follow the flowchart: answer the questions and compare your observations to narrow down possible plastics. You can step back or restart at any moment.</li>
-              <li><a href="https://github.com/ksider/Bly">Bly</a> — A modern offline badge generator for conferences and events — built to run entirely in your browser. </li>
+              <li><a href="https://github.com/ksider/IM-planner">IM-Planner</a> — Research planner for injection molding based on scientific molding methodology.</li>
              <li><a href="https://nikolaysemenov.ru/ftir">FTIR viewer</a> — Infrared spectrometer spectrum viewer. Supports JCAMP-DX files and adds peaks to tables with tooltips.</li>
-             <li><a href="https://nikolaysemenov.ru/pdf">PDF merger</a> — This is a small service that merges images into PDFs. There is also a version with a server component that can merge Word and PDF files.</li>
-                <li><a href="https://github.com/ksider/IM-planner">IM-Planner</a> — Research planner for injection molding based on scientific molding methodology.</li>
+
+             <li><a href="https://nikolaysemenov.ru/qr">QR-Generator-UI</a> — A single-page QR code generator with extensive styling controls, logo support, and shareable configuration links.</li>
+             <li><a href="https://nikolaysemenov.ru/polymers">Interactive-Plastic-Identification</a> — Follow the flowchart: answer the questions and compare your observations to narrow down possible plastics.</li>
+             <li><a href="https://github.com/ksider/Bly">Bly</a> — Offline badge generator for conferences and events — built to run entirely in your browser.</li>
+             <li><a href="https://nikolaysemenov.ru/pdf">PDF merger</a> — This is a small service that merges images into PDFs. There is also a <a href="https://github.com/ksider/PDF">version</a> with a server component that can merge Word and PDF files.</li>
+            
             </ol>
       </div>
 
