--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="ai-apps__headline"><span class="hand">Vibe</span>coding</p>
             <p class="ai-apps__note">These are small, practical applications I built with ChatGPT to solve real problems in my daily technical work. I use them myself — for example, to generate QR codes, inspect FTIR spectra, and quickly work with data where existing tools are either too heavy or simply missing.</p>
             <ol class="ai-apps__list">
-              <li><a href="https://github.com/ksider/IM-planner">IM-Planner</a> — Research planner for injection molding based on scientific molding methodology.</li>
+              <li><a href="https://github.com/ksider/IM-planner">Polymer scale-up Planner</a> — Research planner for different polymer manufacturing processes.</li>
              <li><a href="https://nikolaysemenov.ru/ftir">FTIR viewer</a> — Infrared spectrometer spectrum viewer. Supports JCAMP-DX files and adds peaks to tables with tooltips.</li>
 
              <li><a href="https://nikolaysemenov.ru/qr">QR-Generator-UI</a> — A single-page QR code generator with extensive styling controls, logo support, and shareable configuration links.</li>
