--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
            I work with polymer formulations and processes, developing materials and scaling them from lab to production. I’m really interested in biobased and filled systems, extrusion, and injection molding. I’m looking for a role where I can put my experience to good use and build reliable, real-world materials.
           </p>
         </div>
-        <a class="social__preview social__preview--hero" href="/polymers">
-          <span class="sr-only">Interactive Plastic Identification</span>
+        <a class="social__preview social__preview--hero" href="/PPP">
+          <span class="sr-only">Polymer Processing Planner</span>
           <img
             class="social__preview-image"
             src="assets/ipi/ipi4.png"
-            alt="Interactive Plastic Identification preview"
+            alt="Polymer Processing Planner"
           />
         </a>
         <div class="section__media">
