--- a/PPP/index.html
+++ b/PPP/index.html
@@ -1135,17 +1135,18 @@
             <!-- grid -->
             <line x1="30" y1="30" x2="290" y2="30" stroke="rgba(255,255,255,0.04)" stroke-width="1" stroke-dasharray="3,3"/>
             <line x1="30" y1="55" x2="290" y2="55" stroke="rgba(255,255,255,0.04)" stroke-width="1" stroke-dasharray="3,3"/>
-            <!-- shear-thinning curve fill -->
-            <path d="M40 18 C70 20 90 24 120 36 C150 47 190 56 230 62 C250 65 265 67 280 69 L280 85 L40 85 Z" fill="url(#grad)"/>
+            <!-- shear-thinning curve fill (drop starts from point 2) -->
+            <path d="M40 16 C60 17 74 18 84 18 C98 18 112 25 130 34 C148 43 168 51 190 57 C212 62 236 65 260 66 C270 66.5 276 67 280 67.2 L280 85 L40 85 Z" fill="url(#grad)"/>
             <!-- shear-thinning curve line -->
-            <path d="M40 18 C70 20 90 24 120 36 C150 47 190 56 230 62 C250 65 265 67 280 69" fill="none" stroke="#e8943a" stroke-width="2"/>
+            <path d="M40 16 C60 17 74 18 84 18 C98 18 112 25 130 34 C148 43 168 51 190 57 C212 62 236 65 260 66 C270 66.5 276 67 280 67.2" fill="none" stroke="#e8943a" stroke-width="2.4"/>
             <!-- data points -->
-            <circle cx="40" cy="18" r="3" fill="#e8943a"/>
-            <circle cx="85" cy="23" r="3" fill="#e8943a"/>
-            <circle cx="130" cy="40" r="3" fill="#e8943a"/>
-            <circle cx="180" cy="54" r="3" fill="#e8943a"/>
-            <circle cx="230" cy="62" r="3" fill="#e8943a"/>
-            <circle cx="280" cy="69" r="3" fill="#e8943a"/>
+            <circle cx="40" cy="16" r="3.2" fill="#e8943a"/>
+            <circle cx="84" cy="19" r="3.2" fill="#e8943a"/>
+            <circle cx="126" cy="33" r="3.2" fill="#e8943a"/>
+            <circle cx="170" cy="51" r="3.2" fill="#e8943a"/>
+            <circle cx="218" cy="62" r="3.2" fill="#e8943a"/>
+            <circle cx="260" cy="66" r="3.2" fill="#e8943a"/>
+            <circle cx="280" cy="67.2" r="3.2" fill="#e8943a"/>
             <!-- labels -->
             <text x="30" y="95" font-family="JetBrains Mono, monospace" font-size="7" fill="#4a5060" text-anchor="middle">0</text>
             <text x="155" y="95" font-family="JetBrains Mono, monospace" font-size="7" fill="#4a5060" text-anchor="middle">Shear Rate →</text>
@@ -1462,7 +1463,10 @@ ADMIN_TEMP_PASSWORD=<span class="c-string">change-me-on-first-login</span></pre>
   // Copy code
   function copyCode(btn, id) {
     const el = document.getElementById(id);
-    const text = el.innerText;
+    let text = el.innerText;
+    if (id === 'code2') {
+      text = text.replace(/^SESSION_SECRET=.*$/m, `SESSION_SECRET=${generateSessionSecretHex(32)}`);
+    }
     navigator.clipboard.writeText(text).then(() => {
       btn.textContent = 'Copied!';
       setTimeout(() => btn.textContent = 'Copy', 2000);
@@ -1485,6 +1489,20 @@ ADMIN_TEMP_PASSWORD=<span class="c-string">change-me-on-first-login</span></pre>
     };
     requestAnimationFrame(update);
   }
+
+  function generateSessionSecretHex(bytes = 32) {
+    if (window.crypto && window.crypto.getRandomValues) {
+      const buf = new Uint8Array(bytes);
+      window.crypto.getRandomValues(buf);
+      return Array.from(buf, (b) => b.toString(16).padStart(2, '0')).join('');
+    }
+    let out = '';
+    for (let i = 0; i < bytes; i += 1) {
+      out += Math.floor(Math.random() * 256).toString(16).padStart(2, '0');
+    }
+    return out;
+  }
+
 </script>
 
 </body>
